01-az-dev-net/azuredeploy.json
{
  "$schema": "https://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
  "contentVersion": "1.0.0.0",
  "parameters": {
    "addressPrefix": {
      "type": "string",
      "defaultValue": "10.208.0.0/18",
      "metadata" : {
        "description" : "Address Prefix"
      }
    },
    "subnetPrefixGateway": {
      "type": "string",
      "defaultValue": "10.208.1.0/24",
      "metadata" : {
        "description" : "Gateway subnet prefix"
      }
    },
    "subnetPrefixDns": {
      "type": "string",
      "defaultValue": "10.208.2.0/24",
      "metadata" : {
        "description" : "Gateway subnet prefix"
      }
    },
    "subnetPrefixFrontEnd": {
      "type": "string",
      "defaultValue": "10.208.4.0/22",
      "metadata" : {
        "description" : "Subnet prefix"
      }
    },
    "subnetPrefixApp": {
      "type": "string",
      "defaultValue": "10.208.8.0/21",
      "metadata" : {
        "description" : "App subnet prefix"
      }
    },
    "subnetPrefixMgmt": {
      "type": "string",
      "defaultValue": "10.208.48.0/21",
      "metadata" : {
        "description" : "Subnet prefix"
      }
    },
    "mgmtNSGName": {
      "type": "string",
      "defaultValue": "mgmtNSG",
      "metadata" : {
        "description" : "management network security group"
      }
    },
    "appNSGName": {
      "type": "string",
      "defaultValue": "appNSG",
      "metadata" : {
        "description" : "application network security group"
      }
    }
  },
  "variables" : {
    "virtualNetworkName" : "[resourceGroup().name]",
    "subnetNameMgmt" : "MgmtSubnet",
    "subnetNameFrontEnd" : "FrontEndSubnet",
    "subnetNameApp" : "AppSubnet",
    "subnetNameGateway" : "GatewaySubnet",
    "subnetNameDns" : "DnsSubnet",

    "vnetID":"[resourceId('Microsoft.Network/virtualNetworks',variables('virtualNetworkName'))]",
    "subnetRefDns" : "[concat(variables('vnetID'),'/subnets/',variables('subnetNameDns'))]",
    "subnetRefGateway" : "[concat(variables('vnetID'),'/subnets/',variables('subnetNameGateway'))]",
    "subnetRefMgmt" : "[concat(variables('vnetID'),'/subnets/',variables('subnetNameMgmt'))]",
    "subnetRefFrontEnd" : "[concat(variables('vnetID'),'/subnets/',variables('subnetNameFrontEnd'))]",
    "subnetRefApp" : "[concat(variables('vnetID'),'/subnets/',variables('subnetNameApp'))]"
  },
  "resources": [
    {
      "apiVersion": "2015-05-01-preview",
      "type": "Microsoft.Network/networkSecurityGroups",
      "name": "[parameters('mgmtNSGName')]",
      "location": "[resourceGroup().location]",
      "properties":
      {
        "securityRules": [
          {
            "name": "rdp_rule",
            "properties":
            {
              "description": "Allow RDP",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "3389",
              "sourceAddressPrefix": "10.1.1.0/24",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 100,
              "direction": "Inbound"
            }
          }
        ]
      }
    },
    {
      "apiVersion": "2015-05-01-preview",
      "type": "Microsoft.Network/networkSecurityGroups",
      "name": "[parameters('appNSGName')]",
      "location": "[resourceGroup().location]",

      "properties": {
        "securityRules": [{
          "name": "Allow_FE",
          "properties": {
            "description": "Allow HTTPS traffic",
            "protocol": "Tcp",
            "sourcePortRange": "*",
            "destinationPortRange": "443",
            "sourceAddressPrefix": "Internet",
            "destinationAddressPrefix": "*",
            "access": "Allow",
            "priority": 100,
            "direction": "Inbound"
          }
        },
        {
          "name": "Block_RDP_Internet",
          "properties": {
            "description": "Block RDP",
            "protocol": "tcp",
            "sourcePortRange": "*",
            "destinationPortRange": "3389",
            "sourceAddressPrefix": "Internet",
            "destinationAddressPrefix": "*",
            "access": "Deny",
            "priority": 101,
            "direction": "Inbound"
          }
        },
        {
          "name": "Block_Internet_Outbound",
          "properties": {
            "description": "Block Internet",
            "protocol": "*",
            "sourcePortRange": "*",
            "destinationPortRange": "*",
            "sourceAddressPrefix": "*",
            "destinationAddressPrefix": "Internet",
            "access": "Deny",
            "priority": 200,
            "direction": "Outbound"
          }
          }]
        }
      },
      {
        "apiVersion": "2015-05-01-preview",
        "type": "Microsoft.Network/virtualNetworks",
        "name": "[variables('virtualNetworkName')]",
        "location": "[resourceGroup().location]",
        "dependsOn": [
          "[concat('Microsoft.Network/networkSecurityGroups/', parameters('mgmtNSGName'))]",
          "[concat('Microsoft.Network/networkSecurityGroups/', parameters('appNSGName'))]"
        ],
        "properties": {
          "addressSpace": {
            "addressPrefixes": [
              "[parameters('addressPrefix')]"
              ]
            },
            "subnets": [
              {
                "name": "[variables('subnetNameApp')]",
                "properties": {
                  "addressPrefix": "[parameters('subnetPrefixApp')]"
                }
              },
              {
                "name": "[variables('subnetNameMgmt')]",
                "properties": {
                  "addressPrefix": "[parameters('subnetPrefixMgmt')]"
                }
              },
              {
                "name": "[variables('subnetNameFrontEnd')]",
                "properties": {
                  "addressPrefix": "[parameters('subnetPrefixFrontEnd')]"
                }
              },
              {
                "name": "[variables('subnetNameGateway')]",
                "properties": {
                  "addressPrefix": "[parameters('subnetPrefixGateway')]"
                }
              },
              {
                "name": "[variables('subnetNameDns')]",
                "properties": {
                  "addressPrefix": "[parameters('subnetPrefixDns')]"
                }
              }
            ]
          }
        }
      ]
    }
